--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
                 
             </nav>
         </header>
+        <main>
+            
+        </main>
     </div>
 </body>
 </html>
